# carnival-leaderboard-api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  db.py  main.py
src/controllers/: __init__.py  leaderboard_controller.py  school_controller.py
src/entities/: school.py
src/repositories/: school_repository.py
src/usecases/: leaderboard_usecase.py  school_usecase.py
tests/: conftest.py  test_main.py
tests/controllers/: test_school_controller.py
tests/repositories/: test_school_repository.py
tests/usecases/: test_school_usecase.py
