[tool.poetry]
name = "carnival-leaderboard-api"
version = "0.1.0"
description = ""
authors = ["Paulo Herrera <pauloherreralopes@gmail.com>"]
readme = "README.md"
packages = [{include = "carnival_leaderboard_api"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
