[tool.poetry]
name = "carnival-leaderboard-api"
version = "0.1.0"
description = ""
authors = ["Paulo Herrera <pauloherreralopes@gmail.com>"]
readme = "README.md"
packages = [{include = "carnival_leaderboard_api"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
pymongo = "^4.4.1"
dnspython = "^2.4.1"
python-dotenv = "^1.0.0"
flask-restful = "^0.3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-flask = "^1.2.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
